# desktop-fursona

./: .gitignore  Cargo.toml  README.md
src/: behaviors.rs  event_loop.rs  fursona.rs  main.rs  rendering.rs  settings.rs  stage.rs  system_tray.rs  time.rs
src/behaviors/: pace.rs
src/fursona/: animation.rs  behaviors.rs  fursona_instance.rs  rendering.rs
src/fursona/animation/: animation_2d.rs
src/fursona/behaviors/: pace.rs
src/fursona/rendering/: renderer_2d.rs
src/rendering/: animation_2d.rs  renderer.rs  renderer_2d.rs  renderer_coord.rs  texture_cache.rs
src/rendering/renderer/: square_renderer.rs
src/settings/: settings_file.rs
src/settings/settings_file/: v1.rs  v2.rs
src/stage/: gl_context_wrapper.rs  stage_builder.rs  stage_frame.rs  viewport.rs  viewport_point.rs  viewport_rect.rs
