[package]
name = "desktop_fursona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
glow = "0.13.1"
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tray-item = "0.9.0"
winit = "0.29.10"
